# Profiler

./: .env.example  .gitignore  Dockerfile  cli.py  docker-compose.yml  proj_plan.md  pyproject.toml
profiler/: config.py  main.py
profiler/agent/: graph.py  llm.py  nodes.py  progress.py  state.py
profiler/agent/prompts/: compilation.jinja2  narrowing.jinja2  search_query.jinja2  system.jinja2
profiler/api/: dependencies.py  routes.py  sse.py
profiler/cli/: renderer.py
profiler/db/: database.py  repository.py
profiler/models/: candidate.py  enums.py  profile.py  session.py
profiler/tools/: extractor.py  harvester.py  holehe.py  maigret.py  matcher.py  opencorporates.py  photon.py  robots.py  scraper.py  search.py
tests/: test_agent.py  test_api.py  test_db.py  test_tools.py
tests/fixtures/: mock_html_facebook.html  mock_search_results.json
