[project]
name = "profiler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2",
    "langchain-google-genai>=2.0",
    "google-generativeai>=0.8",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "playwright>=1.48",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "ddgs>=7.0",
    "rapidfuzz>=3.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "jinja2>=3.1",
    "sse-starlette>=2.0",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "langgraph-checkpoint-sqlite>=2.0",
]

[project.optional-dependencies]
local = [
    "langchain-ollama>=0.3",
    "ollama>=0.4",
]
osint = [
    "holehe>=1.61",
    "maigret>=0.4",
    "photon>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
]

[tool.setuptools.packages.find]
include = ["profiler*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
profiler = "cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
